# bird-inference-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
app/services/: predictor.py
app/utils/: logger.py  utils_s3.py
